2003-05-07  Sam Steingold  <sds@gnu.org>

	* error.d (check_encoding): new function, based on
	test_external_format_arg() in stream.d
	(fehler_encoding): removed
	* lispbibl.d (check_encoding, fehler_encoding): ditto
	* foreign.d (CALL-WITH-FOREIGN-STRING): use check_encoding()
	instead of fehler_encoding()
	* encoding.d (CHARSET-TYPEP, ENCODING-CHARSET, CHARSET-RANGE)
	(SET-DEFAULT-FILE-ENCODING, SET-PATHNAME-ENCODING)
	(SET-TERMINAL-ENCODING, SET-FOREIGN-ENCODING, SET-MISC-ENCODING)
	(CONVERT-STRING-FROM-BYTES, CONVERT-STRING-TO-BYTES): ditto
	* stream.d (test_external_format_arg): turned in to a macro that
	calls check_encoding()

2003-05-06  Jörg Höhle  <hoehle@users.sourceforge.net>

	* ffcall/avcall/avcall.h.in (av_overflown): added this macro to
	check when buffer[AV_ALIST_WORDS] is too small for av_call()
	* foreign.d (FOREIGN-CALL-OUT): use it (bug #[ 654718 ])

2003-05-05  Sam Steingold  <sds@gnu.org>

	* backquote.lisp (bq-vec-expand): fixed the unoptimized case
	* compiler.lisp (compile-file): finish listing-stream with a newline
	(compile) [CLISP-DEBUG]: bind *FORM* for TRACE (bug #[ 731248 ])
	* control.d (UNWIND-TO-DRIVER): call unwind_upto() before
	driver() (bug #[ 731251 ])

2003-05-05  Sam Steingold  <sds@gnu.org>

	fixed bug #[ 732767 ]: STRING-INFO does not work with displaced strings
	* charstrg.d (STRING-INFO): handle displaced strings

2003-05-05  Sam Steingold  <sds@gnu.org>

	fixed bug #[ 732656 ]: (proclaim '(notinline ...)) ignored
	* control.d (PROCLAIM): fixed STACK indexing for (NOT)INLINE

2003-05-04  Sam Steingold  <sds@gnu.org>

	* spvw_debug.d (bt_out): extracted from back_trace_out()
	(back_trace_out): use it
	(back_trace_depth, back_trace_out): fully check for circularities

2003-05-04  Sam Steingold  <sds@gnu.org>

	* stream.d (var_stream): check whether the stream is open
	[broken since 2002-04-01]

2003-05-03  Sam Steingold  <sds@gnu.org>

	* acorn.d, amiga.d, unix.d (stderr_handle): added