@@ -263,6 +263,7 @@ LISPSYM(gc,"GC",ext)
 LISPSYM(make_encoding,"MAKE-ENCODING",ext)
 LISPSYM(encodingp,"ENCODINGP",system)
 LISPSYM(charset_typep,"CHARSET-TYPEP",system)
+LISPSYM(encoding_line_terminator,"ENCODING-LINE-TERMINATOR",ext)
 #ifdef UNICODE
 LISPSYM(encoding_charset,"ENCODING-CHARSET",ext)
 LISPSYM(charset_range,"CHARSET-RANGE",system)
